--- a/roles/provision-fission-apb/defaults/main.yml
+++ b/roles/provision-fission-apb/defaults/main.yml
@@ -1,10 +1,9 @@
 ---
 serviceType: LoadBalancer
 image: fission/fission-bundle
-#imageTag: 0.4.0
 imageTag: 20171206
 fetcherImage: fission/fetcher
-fetcherImageTag: latest
+fetcherImageTag: 0.4.0
 controllerPort: 31313
 routerPort: 31314
 functionNamespace: fission-function
